--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "license": "MIT",
   "peerDependencies": {
     "adminjs": "^5.0.0",
-    "typeorm": ">=0.2.28"
+    "typeorm": "^0.2.45"
   },
   "optionalDependencies": {},
   "devDependencies": {
@@ -46,15 +46,11 @@
     "@types/chai": "^4.2.4",
     "@types/mocha": "^5.2.7",
     "@types/node": "12.0.10",
-    "chai": "^4.2.0",
-    "class-validator": "^0.11.0",
-    "mocha": "^6.2.2",
-    "pg": "^7.12.1",
-    "ts-node": "^8.4.1",
-    "tsconfig-paths": "^3.9.0",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "adminjs": "^5.0.0",
+    "chai": "^4.2.0",
+    "class-validator": "^0.11.0",
     "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
@@ -62,9 +58,13 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "husky": "^4.2.5",
+    "mocha": "^6.2.2",
+    "pg": "^7.12.1",
     "semantic-release": "^17.0.7",
     "semantic-release-slack-bot": "^1.6.2",
-    "typeorm": "^0.2.28",
+    "ts-node": "^8.4.1",
+    "tsconfig-paths": "^3.9.0",
+    "typeorm": "^0.2.45",
     "typescript": "^4.0.3"
   }
 }
