--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "license": "MIT",
   "peerDependencies": {
     "adminjs": "^5.0.0",
-    "typeorm": "^0.2.45"
+    "typeorm": "~0.2.45"
   },
   "optionalDependencies": {},
   "devDependencies": {
@@ -64,7 +64,7 @@
     "semantic-release-slack-bot": "^1.6.2",
     "ts-node": "^8.4.1",
     "tsconfig-paths": "^3.9.0",
-    "typeorm": "^0.2.45",
+    "typeorm": "~0.2.45",
     "typescript": "^4.0.3"
   }
 }
