--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "author": "Artem Zabolotnyi <1arteha1@gmail.com>",
   "license": "MIT",
   "peerDependencies": {
-    "adminjs": "^5.0.0",
+    "adminjs": ">=6.0.0",
     "typeorm": "~0.3.0"
   },
   "optionalDependencies": {},
@@ -49,7 +49,7 @@
     "@types/node": "12.0.10",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
-    "adminjs": "^5.0.0",
+    "adminjs": "^6.0.0",
     "chai": "^4.2.0",
     "class-validator": "^0.11.0",
     "eslint": "^7.5.0",
