--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "type": "git",
     "url": "git+https://github.com/SoftwareBrothers/adminjs-typeorm.git"
   },
-  "husky": {
+  "husky--": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
@@ -36,7 +36,7 @@
   "author": "Artem Zabolotnyi <1arteha1@gmail.com>",
   "license": "MIT",
   "peerDependencies": {
-    "adminjs": ">=6.0.0",
+    "adminjs": ">=6.8.11",
     "typeorm": "~0.3.0"
   },
   "optionalDependencies": {},
@@ -49,7 +49,7 @@
     "@types/node": "12.0.10",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
-    "adminjs": "^6.0.0",
+    "adminjs": "^6.8.7",
     "chai": "^4.2.0",
     "class-validator": "^0.11.0",
     "eslint": "^7.5.0",
@@ -65,7 +65,7 @@
     "semantic-release-slack-bot": "^1.6.2",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
-    "typeorm": "~0.3.0",
+    "typeorm": "^0.3.12",
     "typescript": "^4.6.3"
   }
 }
