--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "migrate": "ts-node ./node_modules/typeorm/cli.js migration:run -d spec/utils/test-data-source.ts",
     "check:all": "yarn lint && yarn test && yarn build",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "release": "semantic-release"
+    "release": "semantic-release",
+    "npm-release": "yarn clean&&ONCE=true NODE_ENV=production yarn build"
   },
   "repository": {
     "type": "git",
@@ -49,7 +50,7 @@
     "@types/node": "12.0.10",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
-    "adminjs": "^6.8.7",
+    "adminjs": "github:ucodkr/adminjs#v6.8.7-ucod-1",
     "chai": "^4.2.0",
     "class-validator": "^0.11.0",
     "eslint": "^7.5.0",
